eks/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 767397689571.dkr.ecr.us-east-1.amazonaws.com/simplebank:4550d3c9ce8ce7e0a2c6f743050001294a5f669e
        ports:
        - containerPort: 8080
