eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
spec:
  rules:
  - host: "af7280b0d6ab444f89edbd5704f37008-68575249.us-east-2.elb.amazonaws.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80
